<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/colorTeal">

            <ImageView
                android:id="@+id/ic_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profil"
                android:translationY="-10dp"/>

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img_profile"
                android:text="@string/name_key"
                android:textStyle="bold"
                android:textSize="27sp"
                android:fontFamily="@font/roboto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_profile_name"
                android:text="@string/status"
                android:textColor="@color/colorValueText"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"/>


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:paddingTop="59dp"
                android:paddingLeft="52dp"
                android:paddingRight="52dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        android:layout_marginRight="10dp"
                        android:translationY="-2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleText"
                            android:textSize="20sp"
                            android:text="@string/alamat"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/century_gothic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorValueText"
                            android:textSize="20sp"
                            android:text="Jarak, Siman, Ponorogo"
                            android:fontFamily="@font/century_gothic"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_account"
                        android:layout_marginRight="10dp"
                        android:translationY="-2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleText"
                            android:textSize="20sp"
                            android:text="@string/jenis_kelamin"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/century_gothic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorValueText"
                            android:textSize="20sp"
                            android:text="Laki-laki"
                            android:fontFamily="@font/century_gothic"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone"
                        android:layout_marginRight="10dp"
                        android:translationY="-2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleText"
                            android:textSize="20sp"
                            android:text="@string/no_hp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/century_gothic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorValueText"
                            android:textSize="20sp"
                            android:text="@string/telp"
                            android:fontFamily="@font/century_gothic"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"
                        android:layout_marginRight="10dp"
                        android:translationY="-2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTitleText"
                            android:textSize="20sp"
                            android:text="@string/email"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/century_gothic"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorValueText"
                            android:textSize="20sp"
                            android:text="@string/email_saya"
                            android:fontFamily="@font/century_gothic"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>